--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,1 +1,17 @@
+<h1>投稿一覧ページ</h1>
+<table>
+  <tr>
+    <th>Content</th>
+  </tr>
 
+  <% @posts.each do |post| %>
+    <tr>
+      <td><%= post.content %></td>
+      <td><%= link_to '詳細を確認する', app_path(app.id) %></td>
+      <td><%= link_to '投稿を編集する', edit_app_path(app.id) %></td>
+      <td><%= link_to '投稿を削除する', app_path(app.id), method: :delete %></td>
+    </tr>
+  <% end %>
+</table>
+<br>
+<%= link_to '投稿画面へ', new_app_path %>
