--- a/app/views/apps/new.html.erb
+++ b/app/views/apps/new.html.erb
@@ -1,11 +1,11 @@
 <h1>投稿ページ</h1>
 
-<%= form_with(model: @post, local: true) do |form| %>
-  <% if @post.errors.any? %>
+<%= form_with(model: @apps, local: true) do |form| %>
+  <% if @app.errors.any? %>
     <div id="error">
-      <h2><%= @post.errors.count %>件のエラーがあります。</h2>
+      <h2><%= @app.errors.count %>件のエラーがあります。</h2>
         <ul>
-          <% @post.errors.full_messages.each do |msg| %>
+          <% @app.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
           <% end %>
         </ul>
